syntaxique.output
État 1conflits: 4 décalage/réduction
État 5conflits: 2 réduction/réduction
État 82conflits: 1 réduction/réduction
État 96conflits: 4 réduction/réduction
État 107conflits: 4 décalage/réduction
État 108conflits: 4 décalage/réduction
État 146conflits: 2 décalage/réduction
État 150conflits: 15 décalage/réduction, 1 réduction/réduction
État 158conflits: 2 décalage/réduction


Grammaire

    0 $accept: S $end

    1 S: Corps

    2 Corps: mc_newline Corps
    3      | Suite_Corps Corps
    4      | /* vide */

    5 Suite_Corps: inst_base
    6            | Compound

    7 inst_base: Dec mc_newline
    8          | bool_exp mc_newline
    9          | arith_exp mc_newline

   10 Dec: mcCode IDF signe_aff Affectation
   11    | IDF signe_aff Affectation
   12    | mcCode IDF
   13    | DecT

   14 DecT: mcCode IDF mc_openBracket Int mc_closeBracket
   15     | IDF mc_openBracket Int mc_closeBracket signe_aff Affectation
   16     | IDF mc_openBracket IDF mc_closeBracket signe_aff Affectation

   17 Affectation: Mdp
   18            | arith_exp
   19            | bool_exp

   20 Compound: if_stmt
   21         | while_stmt
   22         | for_stmt

   23 $@1: /* vide */

   24 if_stmt: mc_if bool_exp $@1 mc_colon start_suite elif_stmts

   25 elif_stmts: else_stmt

   26 $@2: /* vide */

   27 $@3: /* vide */

   28 elif_stmts: $@2 mc_elif bool_exp $@3 mc_colon start_suite elif_stmts

   29 $@4: /* vide */

   30 else_stmt: $@4 mc_else mc_colon start_suite

   31 $@5: /* vide */

   32 while_stmt: mc_while bool_exp $@5 mc_colon start_suite

   33 start_suite: inst_base
   34            | mc_newline Indent Suite_Corps suite

   35 suite: Nodent Suite_Corps suite
   36      | end_suite

   37 end_suite: Dedent Suite_Corps
   38          | Dedent
   39          | /* vide */

   40 $@6: /* vide */

   41 for_stmt: mc_for IDF mc_in mc_range mc_openParanthesis Int mc_comma Int mc_closeParanthesis $@6 mc_colon start_suite
   42         | mc_for IDF mc_in IDF mc_colon start_suite

   43 signe_aff: Add Aff
   44          | Sub Aff
   45          | Mul Aff
   46          | Div Aff
   47          | Aff

   48 mcCode: mcInt
   49       | mcBool
   50       | mcChar
   51       | mcFloat

   52 arith_exp: term

   53 $@7: /* vide */

   54 $@8: /* vide */

   55 arith_exp: arith_exp $@7 Add $@8 term

   56 $@9: /* vide */

   57 $@10: /* vide */

   58 arith_exp: arith_exp $@9 Sub $@10 term

   59 $@11: /* vide */

   60 $@12: /* vide */

   61 arith_exp: arith_exp $@11 Mul $@12 term

   62 $@13: /* vide */

   63 $@14: /* vide */

   64 arith_exp: arith_exp $@13 Div $@14 term
   65          | arith_exp notEqual arith_exp
   66          | mc_openParanthesis arith_exp mc_closeParanthesis

   67 term: IDF
   68     | Mdp
   69     | Tableau_indexe

   70 Tableau_indexe: IDF mc_openBracket Int mc_closeBracket
   71               | IDF mc_openBracket IDF mc_closeBracket

   72 bool_exp: bool_term Or bool_term
   73         | bool_term And bool_term
   74         | arith_exp Lower arith_exp
   75         | arith_exp Greater arith_exp
   76         | arith_exp GreaterOrEqual arith_exp
   77         | arith_exp LowerOrEqual arith_exp
   78         | arith_exp mc_in IDF
   79         | bool_term

   80 bool_term: gauche
   81          | arith_exp Equal arith_exp
   82          | Bool

   83 gauche: Not gauche
   84       | mc_openParanthesis bool_exp mc_closeParanthesis

   85 Mdp: Signe Int
   86    | Float
   87    | Bool
   88    | Char

   89 Signe: Add
   90      | Sub
   91      | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
IDF (258) 10 11 12 14 15 16 41 42 67 70 71 78
Int (259) 14 15 41 70 85
mcInt (260) 48
Float (261) 86
mcFloat (262) 51
Bool (263) 82 87
mcBool (264) 49
Char (265) 88
mcChar (266) 50
Aff (267) 43 44 45 46 47
mc_closeParanthesis (268) 41 66 84
mc_openParanthesis (269) 41 66 84
mc_closeBracket (270) 14 15 16 70 71
mc_openBracket (271) 14 15 16 70 71
Add (272) 43 55 89
Sub (273) 44 58 90
And (274) 73
Or (275) 72
Not (276) 83
Greater (277) 75
Lower (278) 74
Equal (279) 81
notEqual (280) 65
GreaterOrEqual (281) 76
LowerOrEqual (282) 77
Mul (283) 45 61
Div (284) 46 64
Indent (285) 34
mc_if (286) 24
mc_elif (287) 28
mc_else (288) 30
mc_in (289) 41 42 78
mc_while (290) 32
mc_colon (291) 24 28 30 32 41 42
mc_comma (292) 41
mc_range (293) 41
mc_for (294) 41 42
mc_newline (295) 2 7 8 9 34
Dedent (296) 37 38
Nodent (297) 35


Non-terminaux, suivis des règles où ils apparaissent

$accept (43)
    à gauche: 0
S (44)
    à gauche: 1, à droite: 0
Corps (45)
    à gauche: 2 3 4, à droite: 1 2 3
Suite_Corps (46)
    à gauche: 5 6, à droite: 3 34 35 37
inst_base (47)
    à gauche: 7 8 9, à droite: 5 33
Dec (48)
    à gauche: 10 11 12 13, à droite: 7
DecT (49)
    à gauche: 14 15 16, à droite: 13
Affectation (50)
    à gauche: 17 18 19, à droite: 10 11 15 16
Compound (51)
    à gauche: 20 21 22, à droite: 6
if_stmt (52)
    à gauche: 24, à droite: 20
$@1 (53)
    à gauche: 23, à droite: 24
elif_stmts (54)
    à gauche: 25 28, à droite: 24 28
$@2 (55)
    à gauche: 26, à droite: 28
$@3 (56)
    à gauche: 27, à droite: 28
else_stmt (57)
    à gauche: 30, à droite: 25
$@4 (58)
    à gauche: 29, à droite: 30
while_stmt (59)
    à gauche: 32, à droite: 21
$@5 (60)
    à gauche: 31, à droite: 32
start_suite (61)
    à gauche: 33 34, à droite: 24 28 30 32 41 42
suite (62)
    à gauche: 35 36, à droite: 34 35
end_suite (63)
    à gauche: 37 38 39, à droite: 36
for_stmt (64)
    à gauche: 41 42, à droite: 22
$@6 (65)
    à gauche: 40, à droite: 41
signe_aff (66)
    à gauche: 43 44 45 46 47, à droite: 10 11 15 16
mcCode (67)
    à gauche: 48 49 50 51, à droite: 10 12 14
arith_exp (68)
    à gauche: 52 55 58 61 64 65 66, à droite: 9 18 55 58 61 64 65 66
    74 75 76 77 78 81
$@7 (69)
    à gauche: 53, à droite: 55
$@8 (70)
    à gauche: 54, à droite: 55
$@9 (71)
    à gauche: 56, à droite: 58
$@10 (72)
    à gauche: 57, à droite: 58
$@11 (73)
    à gauche: 59, à droite: 61
$@12 (74)
    à gauche: 60, à droite: 61
$@13 (75)
    à gauche: 62, à droite: 64
$@14 (76)
    à gauche: 63, à droite: 64
term (77)
    à gauche: 67 68 69, à droite: 52 55 58 61 64
Tableau_indexe (78)
    à gauche: 70 71, à droite: 69
bool_exp (79)
    à gauche: 72 73 74 75 76 77 78 79, à droite: 8 19 24 28 32 84
bool_term (80)
    à gauche: 80 81 82, à droite: 72 73 79
gauche (81)
    à gauche: 83 84, à droite: 80 83
Mdp (82)
    à gauche: 85 86 87 88, à droite: 17 68
Signe (83)
    à gauche: 89 90 91, à droite: 85


état 0

    0 $accept: . S $end

    IDF                 décalage et aller à l'état 1
    mcInt               décalage et aller à l'état 2
    Float               décalage et aller à l'état 3
    mcFloat             décalage et aller à l'état 4
    Bool                décalage et aller à l'état 5
    mcBool              décalage et aller à l'état 6
    Char                décalage et aller à l'état 7
    mcChar              décalage et aller à l'état 8
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12
    mc_if               décalage et aller à l'état 13
    mc_while            décalage et aller à l'état 14
    mc_for              décalage et aller à l'état 15
    mc_newline          décalage et aller à l'état 16

    Int      réduction par utilisation de la règle 91 (Signe)
    $défaut  réduction par utilisation de la règle 4 (Corps)

    S               aller à l'état 17
    Corps           aller à l'état 18
    Suite_Corps     aller à l'état 19
    inst_base       aller à l'état 20
    Dec             aller à l'état 21
    DecT            aller à l'état 22
    Compound        aller à l'état 23
    if_stmt         aller à l'état 24
    while_stmt      aller à l'état 25
    for_stmt        aller à l'état 26
    mcCode          aller à l'état 27
    arith_exp       aller à l'état 28
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 31
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 1

   11 Dec: IDF . signe_aff Affectation
   15 DecT: IDF . mc_openBracket Int mc_closeBracket signe_aff Affectation
   16     | IDF . mc_openBracket IDF mc_closeBracket signe_aff Affectation
   67 term: IDF .
   70 Tableau_indexe: IDF . mc_openBracket Int mc_closeBracket
   71               | IDF . mc_openBracket IDF mc_closeBracket

    Aff             décalage et aller à l'état 36
    mc_openBracket  décalage et aller à l'état 37
    Add             décalage et aller à l'état 38
    Sub             décalage et aller à l'état 39
    Mul             décalage et aller à l'état 40
    Div             décalage et aller à l'état 41

    Add      [réduction par utilisation de la règle 67 (term)]
    Sub      [réduction par utilisation de la règle 67 (term)]
    Mul      [réduction par utilisation de la règle 67 (term)]
    Div      [réduction par utilisation de la règle 67 (term)]
    $défaut  réduction par utilisation de la règle 67 (term)

    signe_aff  aller à l'état 42


état 2

   48 mcCode: mcInt .

    $défaut  réduction par utilisation de la règle 48 (mcCode)


état 3

   86 Mdp: Float .

    $défaut  réduction par utilisation de la règle 86 (Mdp)


état 4

   51 mcCode: mcFloat .

    $défaut  réduction par utilisation de la règle 51 (mcCode)


état 5

   82 bool_term: Bool .
   87 Mdp: Bool .

    mc_closeParanthesis  réduction par utilisation de la règle 82 (bool_term)
    mc_closeParanthesis  [réduction par utilisation de la règle 87 (Mdp)]
    And                  réduction par utilisation de la règle 82 (bool_term)
    Or                   réduction par utilisation de la règle 82 (bool_term)
    mc_colon             réduction par utilisation de la règle 82 (bool_term)
    mc_newline           réduction par utilisation de la règle 82 (bool_term)
    mc_newline           [réduction par utilisation de la règle 87 (Mdp)]
    $défaut              réduction par utilisation de la règle 87 (Mdp)


état 6

   49 mcCode: mcBool .

    $défaut  réduction par utilisation de la règle 49 (mcCode)


état 7

   88 Mdp: Char .

    $défaut  réduction par utilisation de la règle 88 (Mdp)


état 8

   50 mcCode: mcChar .

    $défaut  réduction par utilisation de la règle 50 (mcCode)


état 9

   66 arith_exp: mc_openParanthesis . arith_exp mc_closeParanthesis
   84 gauche: mc_openParanthesis . bool_exp mc_closeParanthesis

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 5
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 44
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 45
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 10

   89 Signe: Add .

    $défaut  réduction par utilisation de la règle 89 (Signe)


état 11

   90 Signe: Sub .

    $défaut  réduction par utilisation de la règle 90 (Signe)


état 12

   83 gauche: Not . gauche

    mc_openParanthesis  décalage et aller à l'état 46
    Not                 décalage et aller à l'état 12

    gauche  aller à l'état 47


état 13

   24 if_stmt: mc_if . bool_exp $@1 mc_colon start_suite elif_stmts

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 5
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 48
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 49
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 14

   32 while_stmt: mc_while . bool_exp $@5 mc_colon start_suite

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 5
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 48
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 50
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 15

   41 for_stmt: mc_for . IDF mc_in mc_range mc_openParanthesis Int mc_comma Int mc_closeParanthesis $@6 mc_colon start_suite
   42         | mc_for . IDF mc_in IDF mc_colon start_suite

    IDF  décalage et aller à l'état 51


état 16

    2 Corps: mc_newline . Corps

    IDF                 décalage et aller à l'état 1
    mcInt               décalage et aller à l'état 2
    Float               décalage et aller à l'état 3
    mcFloat             décalage et aller à l'état 4
    Bool                décalage et aller à l'état 5
    mcBool              décalage et aller à l'état 6
    Char                décalage et aller à l'état 7
    mcChar              décalage et aller à l'état 8
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12
    mc_if               décalage et aller à l'état 13
    mc_while            décalage et aller à l'état 14
    mc_for              décalage et aller à l'état 15
    mc_newline          décalage et aller à l'état 16

    Int      réduction par utilisation de la règle 91 (Signe)
    $défaut  réduction par utilisation de la règle 4 (Corps)

    Corps           aller à l'état 52
    Suite_Corps     aller à l'état 19
    inst_base       aller à l'état 20
    Dec             aller à l'état 21
    DecT            aller à l'état 22
    Compound        aller à l'état 23
    if_stmt         aller à l'état 24
    while_stmt      aller à l'état 25
    for_stmt        aller à l'état 26
    mcCode          aller à l'état 27
    arith_exp       aller à l'état 28
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 31
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 17

    0 $accept: S . $end

    $end  décalage et aller à l'état 53


état 18

    1 S: Corps .

    $défaut  réduction par utilisation de la règle 1 (S)


état 19

    3 Corps: Suite_Corps . Corps

    IDF                 décalage et aller à l'état 1
    mcInt               décalage et aller à l'état 2
    Float               décalage et aller à l'état 3
    mcFloat             décalage et aller à l'état 4
    Bool                décalage et aller à l'état 5
    mcBool              décalage et aller à l'état 6
    Char                décalage et aller à l'état 7
    mcChar              décalage et aller à l'état 8
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12
    mc_if               décalage et aller à l'état 13
    mc_while            décalage et aller à l'état 14
    mc_for              décalage et aller à l'état 15
    mc_newline          décalage et aller à l'état 16

    Int      réduction par utilisation de la règle 91 (Signe)
    $défaut  réduction par utilisation de la règle 4 (Corps)

    Corps           aller à l'état 54
    Suite_Corps     aller à l'état 19
    inst_base       aller à l'état 20
    Dec             aller à l'état 21
    DecT            aller à l'état 22
    Compound        aller à l'état 23
    if_stmt         aller à l'état 24
    while_stmt      aller à l'état 25
    for_stmt        aller à l'état 26
    mcCode          aller à l'état 27
    arith_exp       aller à l'état 28
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 31
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 20

    5 Suite_Corps: inst_base .

    $défaut  réduction par utilisation de la règle 5 (Suite_Corps)


état 21

    7 inst_base: Dec . mc_newline

    mc_newline  décalage et aller à l'état 55


état 22

   13 Dec: DecT .

    $défaut  réduction par utilisation de la règle 13 (Dec)


état 23

    6 Suite_Corps: Compound .

    $défaut  réduction par utilisation de la règle 6 (Suite_Corps)


état 24

   20 Compound: if_stmt .

    $défaut  réduction par utilisation de la règle 20 (Compound)


état 25

   21 Compound: while_stmt .

    $défaut  réduction par utilisation de la règle 21 (Compound)


état 26

   22 Compound: for_stmt .

    $défaut  réduction par utilisation de la règle 22 (Compound)


état 27

   10 Dec: mcCode . IDF signe_aff Affectation
   12    | mcCode . IDF
   14 DecT: mcCode . IDF mc_openBracket Int mc_closeBracket

    IDF  décalage et aller à l'état 56


état 28

    9 inst_base: arith_exp . mc_newline
   55 arith_exp: arith_exp . $@7 Add $@8 term
   58          | arith_exp . $@9 Sub $@10 term
   61          | arith_exp . $@11 Mul $@12 term
   64          | arith_exp . $@13 Div $@14 term
   65          | arith_exp . notEqual arith_exp
   74 bool_exp: arith_exp . Lower arith_exp
   75         | arith_exp . Greater arith_exp
   76         | arith_exp . GreaterOrEqual arith_exp
   77         | arith_exp . LowerOrEqual arith_exp
   78         | arith_exp . mc_in IDF
   81 bool_term: arith_exp . Equal arith_exp

    Greater         décalage et aller à l'état 57
    Lower           décalage et aller à l'état 58
    Equal           décalage et aller à l'état 59
    notEqual        décalage et aller à l'état 60
    GreaterOrEqual  décalage et aller à l'état 61
    LowerOrEqual    décalage et aller à l'état 62
    mc_in           décalage et aller à l'état 63
    mc_newline      décalage et aller à l'état 64

    Sub      réduction par utilisation de la règle 56 ($@9)
    Mul      réduction par utilisation de la règle 59 ($@11)
    Div      réduction par utilisation de la règle 62 ($@13)
    $défaut  réduction par utilisation de la règle 53 ($@7)

    $@7   aller à l'état 65
    $@9   aller à l'état 66
    $@11  aller à l'état 67
    $@13  aller à l'état 68


état 29

   52 arith_exp: term .

    $défaut  réduction par utilisation de la règle 52 (arith_exp)


état 30

   69 term: Tableau_indexe .

    $défaut  réduction par utilisation de la règle 69 (term)


état 31

    8 inst_base: bool_exp . mc_newline

    mc_newline  décalage et aller à l'état 69


état 32

   72 bool_exp: bool_term . Or bool_term
   73         | bool_term . And bool_term
   79         | bool_term .

    And  décalage et aller à l'état 70
    Or   décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 79 (bool_exp)


état 33

   80 bool_term: gauche .

    $défaut  réduction par utilisation de la règle 80 (bool_term)


état 34

   68 term: Mdp .

    $défaut  réduction par utilisation de la règle 68 (term)


état 35

   85 Mdp: Signe . Int

    Int  décalage et aller à l'état 72


état 36

   47 signe_aff: Aff .

    $défaut  réduction par utilisation de la règle 47 (signe_aff)


état 37

   15 DecT: IDF mc_openBracket . Int mc_closeBracket signe_aff Affectation
   16     | IDF mc_openBracket . IDF mc_closeBracket signe_aff Affectation
   70 Tableau_indexe: IDF mc_openBracket . Int mc_closeBracket
   71               | IDF mc_openBracket . IDF mc_closeBracket

    IDF  décalage et aller à l'état 73
    Int  décalage et aller à l'état 74


état 38

   43 signe_aff: Add . Aff

    Aff  décalage et aller à l'état 75


état 39

   44 signe_aff: Sub . Aff

    Aff  décalage et aller à l'état 76


état 40

   45 signe_aff: Mul . Aff

    Aff  décalage et aller à l'état 77


état 41

   46 signe_aff: Div . Aff

    Aff  décalage et aller à l'état 78


état 42

   11 Dec: IDF signe_aff . Affectation

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 5
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 91 (Signe)

    Affectation     aller à l'état 79
    arith_exp       aller à l'état 80
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 81
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 82
    Signe           aller à l'état 35


état 43

   67 term: IDF .
   70 Tableau_indexe: IDF . mc_openBracket Int mc_closeBracket
   71               | IDF . mc_openBracket IDF mc_closeBracket

    mc_openBracket  décalage et aller à l'état 83

    $défaut  réduction par utilisation de la règle 67 (term)


état 44

   55 arith_exp: arith_exp . $@7 Add $@8 term
   58          | arith_exp . $@9 Sub $@10 term
   61          | arith_exp . $@11 Mul $@12 term
   64          | arith_exp . $@13 Div $@14 term
   65          | arith_exp . notEqual arith_exp
   66          | mc_openParanthesis arith_exp . mc_closeParanthesis
   74 bool_exp: arith_exp . Lower arith_exp
   75         | arith_exp . Greater arith_exp
   76         | arith_exp . GreaterOrEqual arith_exp
   77         | arith_exp . LowerOrEqual arith_exp
   78         | arith_exp . mc_in IDF
   81 bool_term: arith_exp . Equal arith_exp

    mc_closeParanthesis  décalage et aller à l'état 84
    Greater              décalage et aller à l'état 57
    Lower                décalage et aller à l'état 58
    Equal                décalage et aller à l'état 59
    notEqual             décalage et aller à l'état 60
    GreaterOrEqual       décalage et aller à l'état 61
    LowerOrEqual         décalage et aller à l'état 62
    mc_in                décalage et aller à l'état 63

    Sub      réduction par utilisation de la règle 56 ($@9)
    Mul      réduction par utilisation de la règle 59 ($@11)
    Div      réduction par utilisation de la règle 62 ($@13)
    $défaut  réduction par utilisation de la règle 53 ($@7)

    $@7   aller à l'état 65
    $@9   aller à l'état 66
    $@11  aller à l'état 67
    $@13  aller à l'état 68


état 45

   84 gauche: mc_openParanthesis bool_exp . mc_closeParanthesis

    mc_closeParanthesis  décalage et aller à l'état 85


état 46

   84 gauche: mc_openParanthesis . bool_exp mc_closeParanthesis

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 5
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 48
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_exp        aller à l'état 45
    bool_term       aller à l'état 32
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 47

   83 gauche: Not gauche .

    $défaut  réduction par utilisation de la règle 83 (gauche)


état 48

   55 arith_exp: arith_exp . $@7 Add $@8 term
   58          | arith_exp . $@9 Sub $@10 term
   61          | arith_exp . $@11 Mul $@12 term
   64          | arith_exp . $@13 Div $@14 term
   65          | arith_exp . notEqual arith_exp
   74 bool_exp: arith_exp . Lower arith_exp
   75         | arith_exp . Greater arith_exp
   76         | arith_exp . GreaterOrEqual arith_exp
   77         | arith_exp . LowerOrEqual arith_exp
   78         | arith_exp . mc_in IDF
   81 bool_term: arith_exp . Equal arith_exp

    Greater         décalage et aller à l'état 57
    Lower           décalage et aller à l'état 58
    Equal           décalage et aller à l'état 59
    notEqual        décalage et aller à l'état 60
    GreaterOrEqual  décalage et aller à l'état 61
    LowerOrEqual    décalage et aller à l'état 62
    mc_in           décalage et aller à l'état 63

    Sub      réduction par utilisation de la règle 56 ($@9)
    Mul      réduction par utilisation de la règle 59 ($@11)
    Div      réduction par utilisation de la règle 62 ($@13)
    $défaut  réduction par utilisation de la règle 53 ($@7)

    $@7   aller à l'état 65
    $@9   aller à l'état 66
    $@11  aller à l'état 67
    $@13  aller à l'état 68


état 49

   24 if_stmt: mc_if bool_exp . $@1 mc_colon start_suite elif_stmts

    $défaut  réduction par utilisation de la règle 23 ($@1)

    $@1  aller à l'état 86


état 50

   32 while_stmt: mc_while bool_exp . $@5 mc_colon start_suite

    $défaut  réduction par utilisation de la règle 31 ($@5)

    $@5  aller à l'état 87


état 51

   41 for_stmt: mc_for IDF . mc_in mc_range mc_openParanthesis Int mc_comma Int mc_closeParanthesis $@6 mc_colon start_suite
   42         | mc_for IDF . mc_in IDF mc_colon start_suite

    mc_in  décalage et aller à l'état 88


état 52

    2 Corps: mc_newline Corps .

    $défaut  réduction par utilisation de la règle 2 (Corps)


état 53

    0 $accept: S $end .

    $défaut  accepter


état 54

    3 Corps: Suite_Corps Corps .

    $défaut  réduction par utilisation de la règle 3 (Corps)


état 55

    7 inst_base: Dec mc_newline .

    $défaut  réduction par utilisation de la règle 7 (inst_base)


état 56

   10 Dec: mcCode IDF . signe_aff Affectation
   12    | mcCode IDF .
   14 DecT: mcCode IDF . mc_openBracket Int mc_closeBracket

    Aff             décalage et aller à l'état 36
    mc_openBracket  décalage et aller à l'état 89
    Add             décalage et aller à l'état 38
    Sub             décalage et aller à l'état 39
    Mul             décalage et aller à l'état 40
    Div             décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 12 (Dec)

    signe_aff  aller à l'état 90


état 57

   75 bool_exp: arith_exp Greater . arith_exp

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 91
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 92
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 93
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 58

   74 bool_exp: arith_exp Lower . arith_exp

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 91
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 92
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 94
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 59

   81 bool_term: arith_exp Equal . arith_exp

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 91
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 92
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 95
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 60

   65 arith_exp: arith_exp notEqual . arith_exp

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 91
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 92
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 96
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 61

   76 bool_exp: arith_exp GreaterOrEqual . arith_exp

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 91
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 92
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 97
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 62

   77 bool_exp: arith_exp LowerOrEqual . arith_exp

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 91
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 92
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 98
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 63

   78 bool_exp: arith_exp mc_in . IDF

    IDF  décalage et aller à l'état 99


état 64

    9 inst_base: arith_exp mc_newline .

    $défaut  réduction par utilisation de la règle 9 (inst_base)


état 65

   55 arith_exp: arith_exp $@7 . Add $@8 term

    Add  décalage et aller à l'état 100


état 66

   58 arith_exp: arith_exp $@9 . Sub $@10 term

    Sub  décalage et aller à l'état 101


état 67

   61 arith_exp: arith_exp $@11 . Mul $@12 term

    Mul  décalage et aller à l'état 102


état 68

   64 arith_exp: arith_exp $@13 . Div $@14 term

    Div  décalage et aller à l'état 103


état 69

    8 inst_base: bool_exp mc_newline .

    $défaut  réduction par utilisation de la règle 8 (inst_base)


état 70

   73 bool_exp: bool_term And . bool_term

    IDF                 décalage et aller à l'état 43
    Float               décalage et aller à l'état 3
    Bool                décalage et aller à l'état 5
    Char                décalage et aller à l'état 7
    mc_openParanthesis  décalage et aller à l'état 9
    Add                 décalage et aller à l'état 10
    Sub                 décalage et aller à l'état 11
    Not                 décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 91 (Signe)

    arith_exp       aller à l'état 104
    term            aller à l'état 29
    Tableau_indexe  aller à l'état 30
    bool_term       aller à l'état 105
    gauche          aller à l'état 33
    Mdp             aller à l'état 34
    Signe           aller à l'état 35


état 71

   72 bool_exp: bool_term Or . bool_term
